# SceneNetv1.0

./: CMakeLists.txt  README.md  getAccuracyNYU.m  main_add_kinect_noise.cpp  main_automate_add_texture.cpp  main_depth_and_labels.cpp  main_living_room_dynamic.cpp  main_rgbd_and_labels.cpp
CMakeModules/: FindMinimalImgUtilities.cmake  FindOpenCV2.cmake
VaFRIC/: VaFRIC.cpp  VaFRIC.h
data/room_89_simple_data/: room_89_simple_trajectory_random_poses_SE3_3x4.txt
math/: MatUtils.h  aux_math.cu  aux_math.h  cumath.h
tinyobjloader/: obj_writer.h
utils/: map_object_label2training_label.h  mesh_utils.h  png_to_lcm.cpp  povray_utils.h  se3_file_utils.h
utils/lcmtypes/: CMakeLists.txt  openni_depth_msg_t.c  openni_depth_msg_t.h  openni_depth_msg_t.lcm  openni_disparity_msg_t.c  openni_disparity_msg_t.h  openni_disparity_msg_t.lcm  openni_frame_msg_t.c  openni_frame_msg_t.h  openni_frame_msg_t.lcm  openni_image_msg_t.c  openni_image_msg_t.h  openni_image_msg_t.lcm
utils/noise/: add_kinect_noise.cu  add_kinect_noise.h  gaussian.h  noise.h  noiseutils.cpp  noiseutils.h  perlin.h
